News
====

Pyclewn 2.0
-----------

.. January 21, 2015

Changes
^^^^^^^

* Windows support has been removed. Pyclewn runs now on Python 2.7 or Python
  3.1 or newer and the same source code is used for all those Python versions.
  Pyclewn uses now asyncio (or trollius on Python versions that do not support
  asyncio, i.e. version 2.7 or older than 3.4) instead of the deprecated
  asyncore Python module.

* The preferred method to install pyclewn is now ``pip``. The Vim run time
  files are installed with a vimball. Local installation is done using the
  Python user scheme instead of the home scheme. pdb-clone is now installed
  separately from PyPI.

* The pyclewn program is now started with the command ``python -m clewn``
  followed by the options and an optional argument that selects which debugger
  to run.

* ``CTRL-E`` is a standard Vim command, it is replaced now with ``CTRL-K`` in
  pyclewn key mappings for clearing breakpoints. The ``(clewn)_console`` is
  not any more popped up after hitting a pyclewn mapped key.

New features
^^^^^^^^^^^^

* The first optional argument of the ``:Pyclewn`` Vim command selects the
  debugger and the following arguments are passed to the debugger. For
  example, to debug ``foobar foobar_arg`` with gdb, run the Vim commmand
  ``:Pyclewn gdb --args foobar foobar_arg``.

* The new ``g:pyclewn_terminal`` Vim global variable allows the pyclewn
  program started with ``:Pyclewn`` to run in a terminal instead of as a
  daemon, and helps trouble shooting startup problems.

* The ``Cballooneval`` command has been added.

Bug fixes
^^^^^^^^^

* When pyclewn is started from a terminal, the controlling terminal of the gdb
  inferior process is now correctly set to the terminal from where pyclewn has
  been started.

* The terminal spawned by the ``inferiortty`` command is now automatically
  closed at the end of each debugging session.

* Fix a gdb version parsing error on the non-conformant Cygwin versions of